add custom lint rules and enforce logging standards using applogger -- feat: Implement AppLogger and enforce logging standards, add flavors documentation
This commit introduces the `AppLogger` utility to standardize logging across the application. It also enforces the use of `AppLogger` by adding checks to the pre-commit hook and CI pipeline, and by creating custom lint rules to flag and fix prohibited logging methods such as `debugPrint` and `log`. Additionally, comprehensive documentation about app flavors for both users and developers has been added.

**Key Changes:**

-   **AppLogger Implementation:** Created a custom `AppLogger` utility that conditionally logs based on `kDebugMode`.
-   **Pre-commit Hook:** Added checks to prevent the use of `debugPrint` and `log` in the project.
-   **CI Pipeline:** Added a new job to verify that no prohibited logging methods are used.
-   **Custom Lint Rules:** Created custom lint rules in the `memverse_lints` package to detect `debugPrint` and `log`, and to provide quick fixes for replacing them with `AppLogger`.
-   **Documentation:**
    -   Added `flavors_info_for_users.md` and `flavor_info_for_devs.md` to explain the purpose and technical implementation of app flavors.
    -   Updated `README.md` with logging standards and information about flavors, and added MIT license information.
    -   Updated `CONTRIBUTING.md` with guidelines on logging and flavors.
    - Created `logging.md` that describes logging standards and methods.
-   **Pull Request Template:** Updated the pull request template to reflect the changes and include a testing checklist.
-   **AI Prompts Log:** Added a log file `MEM-102_3_may_2025_ai_prompts_log.md` to record the interactions and prompts used during development.

**Jira Tickets:**

-   [MEM-112](https://anirac-tech.atlassian.net/browse/MEM-112): Implement logging standards and AppLogger
-   [MEM-102](https://anirac-tech.atlassian.net/browse/MEM-102): Documentation for app flavors
-

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -185,6 +185,25 @@ jobs:
           name: integration-test-coverage
           path: coverage/integration_html
 
+  check-logging-standards:
+    name: Check Logging Standards
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Check for prohibited logging methods
+        run: |
+          echo "Checking for prohibited logging methods..."
+          GREP_RESULTS=$(grep -r --include="*.dart" -E "(debugPrint\(| log\()" lib || true)
+          
+          if [ -n "$GREP_RESULTS" ]; then
+            echo "::error::Found prohibited logging methods. Please use AppLogger.d() or AppLogger.e() instead:"
+            echo "$GREP_RESULTS"
+            exit 1
+          else
+            echo "No prohibited logging methods found. All code uses AppLogger as required."
+          fi
+
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
     with:
